[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
name = "miniature-goggles"
version = "0.1.0"

[dependencies]
bytes = "0.3.0"
env_logger = "0.3.0"
futures = "0.1"
log = "0.3.6"
rand = "0.3.14"
serde = "0.7.0"
time = "0.1.35"
tokio-core = "0.1"

[dependencies.spki-sexp]
git = "https://github.com/cstorey/spki-sexp.rs.git"
optional = false

[dependencies.tokio-middleware]
git = "https://github.com/tokio-rs/tokio-middleware"

[dependencies.tokio-proto]
git = "https://github.com/tokio-rs/tokio-proto"

[dependencies.tokio-service]
git = "https://github.com/tokio-rs/tokio-service"

[dependencies.tokio-timer]
git = "https://github.com/tokio-rs/tokio-timer"
